--- a/gold-admin-frontend/src/app/views/partials/components/upload-packets/upload-packets.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/upload-packets/upload-packets.component.html
@@ -1,5 +1,4 @@
-<div *ngIf="url != 'view-loan'">
-    <!-- {{url != 'view-loan'}} {{url}} -->
+<div *ngIf="!(url == 'view-loan' || url == 'view-scrap')">
     <form class="row justify-content-center" action="" [formGroup]="packetInfo" (submit)="addmore()" #form="ngForm">
         <div class="col-2">
             <select class="form-control packet-dropdown mandatory " formControlName="packetId"
@@ -45,7 +44,7 @@
                 <thead>
                     <th class="transparent">Packet</th>
                     <th class="transparent" *ngIf="!scrapIds">Ornaments</th>
-                    <th class="transparent" *ngIf="url != 'view-loan'"></th>
+                    <th class="transparent" *ngIf="!(url == 'view-loan' || url == 'view-scrap')"></th>
                 </thead>
                 <tbody>
                     <tr formArrayName="packetOrnamentArray" *ngFor="let packet of packets.controls;index as idx">
@@ -57,7 +56,7 @@
                             <td class="text-color " *ngIf="!scrapIds">
                                 <label class="m-0">{{packet.controls.ornamentsName.value | uppercase  }}</label>
                             </td>
-                            <td class="text-gray text-center" *ngIf="url != 'view-loan'">
+                            <td class="text-gray text-center" *ngIf="!(url == 'view-loan' || url == 'view-scrap')">
                                 <img src="../../../../../../../assets/media/icons/cancel.png" alt="" height="15"
                                     (click)="removeSelectedPacketsData(idx)">
                             </td>
@@ -76,7 +75,7 @@
         </div>
         <img class="packets position-relative" [src]="packetImg.controls.emptyPacketWithNoOrnamentImage.value"
             *ngIf="packetImg.controls.emptyPacketWithNoOrnamentImage.value">
-        <img *ngIf="packetImg.controls.emptyPacketWithNoOrnamentImage.value && url != 'view-loan'"
+        <img *ngIf="packetImg.controls.emptyPacketWithNoOrnamentImage.value && !(url == 'view-loan' || url == 'view-scrap')"
             src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
             (click)="webcam('emptyPacketWithNoOrnament','emptyPacketWithNoOrnamentImage')">
         <label class="text-center w-100 font-weight-500 pacekts-label text-gray mandatory ">
@@ -96,7 +95,7 @@
         </div>
         <img class="packets position-relative" [src]="packetImg.controls.sealingPacketWithWeightImage.value"
             *ngIf="packetImg.controls.sealingPacketWithWeightImage.value">
-        <img *ngIf="packetImg.controls.sealingPacketWithWeightImage.value && url != 'view-loan'"
+        <img *ngIf="packetImg.controls.sealingPacketWithWeightImage.value && !(url == 'view-loan' || url == 'view-scrap')"
             src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
             (click)="webcam('sealingPacketWithWeight','sealingPacketWithWeightImage')">
         <label class="text-center w-100 font-weight-500 pacekts-label text-gray mandatory "> Sealed Packet(s) with
@@ -116,7 +115,7 @@
         </div>
         <img class="packets position-relative" [src]="packetImg.controls.sealingPacketWithCustomerImage.value"
             *ngIf="packetImg.controls.sealingPacketWithCustomerImage.value">
-        <img *ngIf="packetImg.controls.sealingPacketWithCustomerImage.value && url != 'view-loan'"
+        <img *ngIf="packetImg.controls.sealingPacketWithCustomerImage.value && !(url == 'view-loan' || url == 'view-scrap')"
             src="../../../../../assets/media/icons/edit.svg" alt="" class="kt-pointer edit-icon"
             (click)="webcam('sealingPacketWithCustomer','sealingPacketWithCustomerImage')">
         <label class="text-center w-100 font-weight-500 pacekts-label text-gray mandatory "> Sealed packet(s) with
