--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-application-form/scrap-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/scrap-application-form/scrap-application-form.component.html
@@ -23,7 +23,8 @@
                     <mat-tab label="Customer Acknowledgment" [disabled]="disabled[2]">
                         <kt-upload-documents [scrapIds]="scrapIds" (next)="next($event)" [totalAmt]="totalAmount"
                             [acknowledgmentDocuments]="customerDetail" [showButton]="showButton"
-                            [showScrapAcknowledgementFlag]="true" [standardDeductionArr]="standardDeductionArr">
+                            [showScrapAcknowledgementFlag]="true" [standardDeductionArr]="standardDeductionArr"
+                            (processingChrgs)="processingChrgs($event)">
                         </kt-upload-documents>
                     </mat-tab>
                     <mat-tab label="Melting Ornaments" [disabled]="disabled[3]">
