--- a/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
@@ -140,12 +140,13 @@
                                         <span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
                                             (click)="passbook.click()">Attach</span>
                                     </div>
-                                    <input type="file" class="d-none" accept="image/png, image/jpeg" #passbook
-                                        (input)="getFileInfo($event)">
-                                    </div>
-                                        <mat-error *ngIf="controls.passbookProof.touched && controls.passbookProof.invalid">
-                                            Required field
-                                        </mat-error>
+                                    <input type="file" class="d-none"
+                                        accept="{{scrapIds ? 'image/png, image/jpeg, .pdf':'image/png, image/jpeg'}}"
+                                        #passbook (input)="getFileInfo($event)">
+                                </div>
+                                <mat-error *ngIf="controls.passbookProof.touched && controls.passbookProof.invalid">
+                                    Required field
+                                </mat-error>
                             </div>
                         </div>
                         <div class="row kt-margin-b-20">
