--- a/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/ornaments/ornaments.component.html
@@ -276,7 +276,8 @@
                                     <div class="col-8">
                                         <select class="form-control" formControlName="karat" (change)="selectKarat(idx)"
                                             [class.isError]="ornament.controls.karat.touched && ornament.controls.karat.invalid">
-                                            <option value="" [disabled]="true" [selected]="true">Select Karat</option>
+                                            <option value="" [disabled]="true" [selected]="ornament.controls.karat.value == '' ||
+                                            ornament.controls.karat.value == null">Select Karat</option>
                                             <option [value]="karat.karat" *ngFor="let karat of karatArr"
                                                 [selected]="ornament.controls.karat.value == karat.karat">
                                                 {{karat.karat}}
@@ -323,7 +324,8 @@
                                     <div class="col-8">
                                         <select class="form-control" formControlName="customerConfirmation"
                                             [class.isError]="ornament.controls.customerConfirmation.touched && ornament.controls.customerConfirmation.invalid">
-                                            <option value="" [disabled]="true" [selected]="true">Select Customer
+                                            <option value="" [disabled]="true" [selected]="ornament.controls.customerConfirmation.value == '' ||
+                                                ornament.controls.customerConfirmation.value == null">Select Customer
                                                 Confirmation</option>
                                             <!-- <option value="yes">Yes</option>
                                             <option value="no">No</option> -->
