--- a/gold-admin-frontend/src/app/views/partials/components/upload-documents/upload-documents.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/upload-documents/upload-documents.component.html
@@ -390,7 +390,8 @@
             <div class="col" *ngIf="showScrapAcknowledgementFlag">
                 <select class="form-control" formControlName="standardDeduction"
                     [class.isError]="controls.standardDeduction.touched && controls.standardDeduction.invalid">
-                    <option value="" [disabled]="true" [selected]="true">Select Standard Deduction</option>
+                    <option value="" [disabled]="true" [selected]="controls.standardDeduction.value == '' ||
+                    controls.standardDeduction.value == null">Select Standard Deduction</option>
                     <option [value]="sd.standardDeduction" *ngFor="let sd of standardDeductionArr">
                         {{sd.standardDeduction}}
                     </option>
