--- a/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filtered-data/filtered-data.component.html
@@ -178,6 +178,19 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- appliedScrap -->
+                    <div class="filtered-data" *ngIf="filteredList?.scrapStatus">
+                        <div class="filtered-title">By Scrap Status</div>
+                        <div class="d-flex">
+                            <div class="filtered-value" *ngFor="let item of filteredList?.scrapStatus; let i = index;">
+                                <span>{{item?.stageName | titlecase}}</span>
+                                <img class="kt-pointer cancel-filtered-value" src="assets/media/icons/cancel.svg"
+                                    (click)="clearFilter('scrapStatus',i)">
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </kt-portlet-body>
