--- a/gold-admin-frontend/src/app/views/partials/components/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/basic-details/basic-details.component.html
@@ -60,7 +60,8 @@
                     </div>
                 </div>
             </div>
-            <div class="row kt-margin-t-15" *ngIf="!(url == 'loan-transfer' || url == 'scrap-buying-application-form')">
+            <div class="row kt-margin-t-15"
+                *ngIf="!(url == 'loan-transfer' || url == 'scrap-buying-application-form' || url == 'view-scrap')">
                 <div class="col-6">
                     <div class="row">
                         <div class="col-4  form-label">
