--- a/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
@@ -125,7 +125,8 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <div class="row" *ngIf="!details?.masterLoan?.applicationFormForAppraiser">
+                        <div class="row"
+                            *ngIf="!(details?.masterLoan?.applicationFormForAppraiser || details?.applicationFormForAppraiser)">
                             <div class="col-4 form-label">
                                 <label class="mandatory kt-padding-l-10">Upload Passbook / Bank Statement / Cancel
                                     Cheque</label>
