--- a/gold-admin-frontend/src/app/views/partials/components/approval/approval.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/approval/approval.component.html
@@ -170,8 +170,8 @@
                 </table>
             </div>
         </div>
-        <div class="row justify-content-center" *ngIf="((stage == 6) && controls.loanStatusForBM.value == 'incomplete' && controls.commentByBM.value) ||
-            (stage == 6 && controls.scrapStatusForBM.value == 'incomplete' && controls.commentByBM.value)">
+        <div class="row justify-content-center" *ngIf="(stage == 7 && controls.loanStatusForBM.value == 'incomplete' && controls.commentByBM.value) ||
+            (stage == 7 && controls.scrapStatusForBM.value == 'incomplete' && controls.commentByBM.value)">
             <div class="col-7">
                 <div class="row">
                     <div class="col-4">
@@ -188,10 +188,9 @@
                 </div>
             </div>
         </div>
-
         <div class="row justify-content-center"
-            *ngIf="((stage == 6 || stage == 2 ) && controls.loanStatusForOperatinalTeam.value == 'incomplete' && controls.commentByOperatinalTeam.value) ||
-            ((stage == 6 || stage == 2) && controls.scrapStatusForOperatinalTeam.value == 'incomplete' && controls.commentByOperatinalTeam.value)">
+            *ngIf="((stage == 6 || stage == 2 || stage == 1) && controls.loanStatusForOperatinalTeam.value == 'incomplete') ||
+            ((stage == 6 || stage == 2 || stage == 1) && controls.scrapStatusForOperatinalTeam.value == 'incomplete' && controls.commentByOperatinalTeam.value)">
             <div class="col-7">
                 <div class="row">
                     <div class="col-4">
@@ -263,7 +262,7 @@
             </div>
         </div>
         <div class="row justify-content-center "
-            *ngIf="(stage == 7 && controls.loanStatusForOperatinalTeam.value != 'pending' && controls.loanStatusForOperatinalTeam.value != 'approved') &&
+            *ngIf="(stage == 7 && controls.loanStatusForOperatinalTeam.value != 'pending' && controls.loanStatusForOperatinalTeam.value != 'approved') ||
             (stage == 7 && controls.scrapStatusForOperatinalTeam.value != 'pending' && controls.scrapStatusForOperatinalTeam.value != 'approved')">
             <div class=" col-8">
                 <mat-form-field class="w-100">
