--- a/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/bank-details/bank-details.component.html
@@ -131,7 +131,7 @@
                                     Cheque</label>
                             </div>
                             <div class="col-6 mb-3"
-                                *ngIf="!(details?.masterLoan?.applicationFormForAppraiser || details?.applicationFormForAppraiser)">
+                                *ngIf="!(details?.masterLoan?.applicationFormForAppraiser)">
                                 <div class="input-group">
                                     <input type="text" class="form-control" placeholder="Select File"
                                         aria-label="Recipient's username" aria-describedby="basic-addon2" readonly
